@@ -217,6 +217,8 @@ LEARNED_TOOL_REPORT (LR)
 
 TOOL_EXPERTS (TE)
 
+TOOL_SLOTS (TS)
+
 FRAME (FM)
 
 PONG
@@ -941,6 +943,14 @@ List of nearby players that already have learned the unlearned tool player is
 holding.
 
 Sent whenever player's held object changes to an unlearned tool.
+
+
+
+TS
+used total
+#
+
+Tells player how many slots have been used and how many total they have.
 
 
 
